--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-<h1>Hello</h1>
-<div class="wrapper">
-  <button id="btn">hello</button>
+<div class="box">
+	
+<label class="lblQuestion">Question 1</label>
+<label class="lblTimer">Timer</label>
+<label id="lbl0">0.00</label>
+<label class="lblRemaining">Remaining question</label>
+<label class="lbl0">0</label>
+<div class="question">
+<p class="paragrapQestion">what is the deffrence between java script and java?</p>
 </div>
+<div class="choises">
+	  <button type="button" class="button1">ashraf jibreel</button>
+	    <button type="button" class="button1">mahmmod ashraf </button>
+	      <button type="button" class="button1">ashraf ashraf </button>
+	        <button type="button" class="button1">as</button>
+	<div id=divNext> <button id=btnNext>Nxt</button></div>       
+</div>
+
+</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src = 'main.js'></script>
+
 </body>
 </html>
