--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
 
 </head>
 <body>
+
 <div class="box">
 	
 <label class="lblQuestion">Question 1</label>
@@ -17,16 +18,16 @@
 <div class="question">
 <p class="paragrapQestion">what is the deffrence between java script and java?</p>
 </div>
-<div class="choises">
-	  <button type="button" class="button1">ashraf jibreel</button>
-	    <button type="button" class="button1">mahmmod ashraf </button>
-	      <button type="button" class="button1">ashraf ashraf </button>
-	        <button type="button" class="button1">as</button>
-	<div id=divNext> <button id=btnNext>Nxt</button></div>       
+ 
+	 
+	     
 </div>
 
 </div>
 
+<div class="bounce">
+   Let's Start
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src = 'main.js'></script>
 
