fixed the logic for the buttons

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 	<div class="box">
 
-		<label class="lblQuestion">Question 1</label>
+		<label class="lblQuestion">Question <span id='question'></span></label>
 		<label class="lblTimer">Timer</label>
 		<label id="lbl0">0.00</label>
-		<label class="lblRemaining">Remaining question</label>
-		<label class="lbl0">0</label>
+		<label class="lblRemaining">Remaining question <span id='questionsRemaining'></span></label>
 		<div class="question">
 			<p class="paragrapQestion">what is the deffrence between java script and java?</p>
 		</div>
+		<div class="answers"></div>
 	</div>
 	</div>
 	<div class="bounce">
