--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+	
 
+</head>
 <body>
 
-	<div class="box">
+<div class="box">
+	
+<label class="lblQuestion">Question 1</label>
+<label class="lblTimer">Timer</label>
+<label id="lbl0">0.00</label>
+<label class="lblRemaining">Remaining question</label>
+<label class="lbl0">0</label>
+<div class="question">
+<p class="paragrapQestion">what is the deffrence between java script and java?</p>
+</div>
+ 
+</div>
 
-		<label class="lblQuestion">Question <span id='question'></span></label>
-		<label class="lblTimer">Timer</label>
-		<label id="lbl0">0.00</label>
-		<label class="lblRemaining">Remaining question <span id='questionsRemaining'></span></label>
-		<div class="question">
-			<p class="paragrapQestion">what is the deffrence between java script and java?</p>
-		</div>
-		<div class="answers"></div>
-	</div>
-	</div>
-	<div class="bounce">
-		Let's Start
-	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script type="text/javascript" src='main.js'></script>
+</div>
+
+<div class="bounce">
+   Let's Start
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src = 'main.js'></script>
 
 </body>
-
 </html>
