--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
     <div class="box">
-        <div style="width:100%;overflow: hidden;">
+        <div style="width:100%;overflow: hidden; font-size: 20px; color:rgb(239, 243, 9)">
             <div class="label-holder">
-                <label class="lblQuestion">Question <span id='question'></span></label>
+                <label class="lblQuestion">Question : <span id='question'></span></label>
             </div>
 
             <div class="label-holder">
@@ -20,7 +20,7 @@
             </div>
 
             <div class="label-holder">
-                <label class="lblRemaining">Remaining question <span id='questionsRemaining'></span></label>
+                <label class="lblRemaining">Remaining question : <span id='questionsRemaining'></span></label>
             </div>
 
         </div>
@@ -34,7 +34,7 @@
     <div class="bounce">
         Let's Start
     </div>
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src='main.js'></script>
 
